--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Impage previewer",
     "browser": "./src/index.js",
     "engines": {
-        "codebox": ">=1.0.0"
+        "codebox": ">=1.0.0-alpha"
     },
     "packageDependencies": {
         "tabs": "CodeboxIDE/package-tabs"
